CSS Test in the portfolio folder

--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -1,6 +1,23 @@
 h1{
     font-family: 'Poiret One', sans-serif;
     text-align: center;
-    font-size: 3em;
-    color: #D6B366;
+    font-size: 36px;
+    color: #ff59a9;
+}
+p{
+    color: rgb(104, 190, 243);
+    font-size: 18px;
+}
+ul{
+    color: orange;
+    list-style-type: square;
+}
+.navlinks{
+    list-style-type: none;
+    font-size: 16px;
+    font-weight: bold;
+}
+.navlinks a{
+    color: rgb(114, 194, 114)
+    border: 4px  border-color: blueviolet;
 }
