--- a/Styles/CSS Fundamentals/style.css
+++ b/Styles/CSS Fundamentals/style.css
@@ -7,16 +7,41 @@ body {
 
 nav {
   background: rgba(205, 130, 233, 0.5);
-  height: 80px;
+  height: 70px;
   width: 100%;
 }
 
 .logo {
-    color: rgb(5, 5, 104);
-    font-size: 35px;
-    font-weight: bold;
-    line-height: 80px;
-    background-color: azure
-    margin: ;
-    padding: ;
+  color: rgb(5, 5, 104);
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 80px;
+  /*background-color: azure;*/
+  margin: 0, 50px;
+  /*padding: 10px, 30px;*/
 }
+
+nav ul {
+  float: right;
+  margin-right: 40px;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+
+nav ul li a {
+  font-size: 22px;
+  color: rgb(5, 5, 104);
+  text-decoration: none;
+}
+
+a.active {
+  background: rgb(160, 202, 239);
+  /*color: white;*/
+  padding: 10px, 20px;
+  border-radius: 120px;
+}
+
