--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
-  background: url(/Styles/images/Stars.jpg);
+  background: url(/Styles/images/stars\ \(1\).jpg);
   background-size: cover;
   height: 100vh;
 }
