links in the style page

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
-  background-image: url(/Styles/images/Stars.jpg);
+  background-image: url(../Styles/images/stars\\(1\).jpg);
   background-size: cover;
   height: 100vh;
 }
