--- a/Blogs/blog.css
+++ b/Blogs/blog.css
@@ -19,16 +19,85 @@ nav {
   margin: 0 15px;
 }
 
-nav li{
-    float: right;
-    display: inline-block;
-    margin-right: 12px;
-    margin-top: 8px;
-    list-style-type: none;  
+nav ul {
+  float: right;
+  margin-right: 40px;
+  list-style-type: none;
 }
 
-#starlogo {
-    width: 40px;
-    margin: 0 0 -14px -14px;
+nav ul li {
+  display: inline-block;
+  margin-right: 12px;
+  margin-top: 8px;
+}
+
+nav li a {
+  font-size: 19px;
+  color: rgb(43, 0, 255);
+  text-decoration: none;
+}
+
+a.active {
+  background: rgb(160, 217, 239);
+  padding: 5px 10px;
+  border-radius: 50px;
+}
+
+.starlogo {
+  width: 40px;
+  margin: 0 0 -14px -14px;
+}
+
+.menu-icon {
+  font-size: 30px;
+  color: rgb(255, 255, 179);
+  float: right;
+  margin-right: 40px;
+  line-height: 80px;
+  cursor: pointer;
+  display: none;
+}
+
+#check-one {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .menu-icon {
+    display: block;
   }
-  
+  nav ul {
+    position: fixed;
+    width: 100%;
+    background-color: rgba(5, 5, 104, 0.419);
+    /*backdrop-filter: blur;*/
+    height: 100vh;
+    text-align: center;
+    top: 60px;
+    display: block;
+    padding: 30px 0px;
+    left: -120%;
+    transition: all 1s;
+  }
+
+  nav ul li {
+    display: block;
+    padding: 30px 0px;
+  }
+
+  nav li a {
+    font-size: 25px;
+    color: rgb(5, 5, 104);
+    text-transform: uppercase;
+  }
+
+  #check-one:checked ~ ul {
+    left: 0;
+  }
+}
+
+h1{
+  text-align: center;
+  text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
+}
+
