Completed Blog Home Page: Added Footer, Columns, Dates, Images, Links

--- a/Blogs/blog.css
+++ b/Blogs/blog.css
@@ -98,11 +98,106 @@ a.active {
 
 h1 {
   text-align: center;
+  margin-top: 100px;
   text-transform: uppercase;
   text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
 }
 
-li a {
+.blogs{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 40px;
+}
+
+.blog-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  flex-wrap: wrap;
+  border: 1px #000000;
+  border-radius: 20px;
+  flex-wrap: wrap;
+  align-content: stretch;
+  height: 70vh;
+}
+
+.blog-box{
+  width: 350px;
+  background-color: blueviolet;
+  border: 1px solid rgb(160, 217, 239);
+  margin: 20px;
+  border-radius: 20px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.blog-image{
+width:auto;  
+ height: 40vh; 
+ padding:0px;
+ border: #000000;
+ display: flex;
+}
+
+.blog-image img{
+  width: 100%;
+  height:100%;
+  object-fit: cover;
+  object-position: center;
+  }
+  
+  .blog-text{
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  }
+  
+  .blog-text span{
+  color: rgb(0, 0, 0);
+  font-size: 0.9rem;
+  }
+  
+  .blog-text .blog-title{
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #000000;
+  }
+  
+  .blog-text .blog-title:hover{
+  color: #881c28;
+  transition: all ease 0.3s;
+  }
+  
+  .blog-text p{
+  color:rgb(157, 145, 145);
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient:vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 20px 0px;
+  }
+  
+  .blog-text a{
+  color: black;
+  }
+  
+  .blog-text a:hover{
+  color:#881c28;
+  transition: all ease 0.3s;
+  }
+
+  footer {
+    text-align: center;
+    margin-top: 540px;
+    font-size: 15px;
+    letter-spacing: 2px;
+  }
+/*li a {
   text-decoration: none;
 }
 
