--- a/Styles/HomePage.css
+++ b/Styles/HomePage.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: rgb(255, 255, 179);
@@ -9,7 +14,9 @@ body {
 
 nav {
   background: rgba(5, 5, 104, 0.659);
-  padding: 50px;
+  padding-top: 0;
+  left: 0;
+  top: 0;
   max-width: 100%;
   height: auto;
 }
