--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 body{
     font-family: Georgia, "Times New Roman", Times, serif;
     color: rgb(255, 255, 179);
@@ -9,8 +15,11 @@ body{
 
 nav{
     background: rgba(5, 5, 104, 0.659);
-    max-width: 100%;
-    height: auto; 
+  padding-top: 0;
+  left: 0;
+  top: 0;
+  max-width: 100%;
+  height: auto;
 }
 
 .logo{
@@ -28,7 +37,7 @@ nav ul{
 nav ul li {
     display: inline-block;
     margin-right: 12px;
-    margin-top: 8px;   
+    margin-top: 20px;   
 }
 
 nav li a{
