--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -105,7 +105,97 @@ a.active{
     }
 }
 
+h1{
+    margin-top: 15px;
+    text-align: center;
+    text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
+}
 
+.u-photo{
+    display: block;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+  }
+
+  img {
+    border-radius: 50px;
+  }
+
+  h2 {
+    color: rgb(255, 255, 179);
+    text-align: center;
+    text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(43, 0, 255);
+    background: rgba(141, 168, 249, 0.844);
+    text-transform: uppercase;
+    margin-top: 60px;
+    letter-spacing: 3px;
+  }
+
+  .profiletitle{
+    text-align: center;
+    text-transform: capitalize;
+    text-transform: bold;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
+    letter-spacing: 2px;
+    text-decoration:underline ;
+    text-decoration-color: rgb(160, 217, 239);
+  }
+
+  .description{
+    line-height: 1.7;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+/*.profilecontainer{
+    display: flex;
+    gap: 2rem;
+    max-width: fit-content;
+  margin: auto;
+}
+
+.profilecontainer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+.profileImg{
+    width: 100%;
+  max-width: 250px;
+  border-radius: 100%;
+}
+
+.profile{
+    grid-column: 1 / -1;
+  margin-bottom: 2rem;
+}
+
+.profileTitle {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+  }*/
+
+  
+  
+  .u-url {
+    font-style:oblique;
+  }
+
+  .container {
+    display: grid;
+    gap: 20px;
+    padding: 30px;
+    max-width: fit-content;
+    margin: auto;
+    background-color: var(--color4);
+  }
   
 /*h1{
     font-family: 'Poiret One', sans-serif;
