--- a/Portfolio/Portfolio.css
+++ b/Portfolio/Portfolio.css
@@ -197,6 +197,101 @@ h1{
     background-color: var(--color4);
   }
   
+  .portfolio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 40px;
+  }
+
+  .portfolio-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    flex-wrap: wrap;
+    border: 1px #000000;
+    border-radius: 20px;
+    flex-wrap: wrap;
+    align-content: stretch;
+    height: 70vh;
+  }
+
+  .portfolio-box{
+    width: 350px;
+    background-color: blueviolet;
+    border: 1px solid rgb(160, 217, 239);
+    margin: 20px;
+    border-radius: ;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  .portfolio-image{
+    width:auto;  
+ height: 40vh; 
+ padding:0px;
+ border: #000000;
+ display: flex;
+  }
+
+  .portfolio-image img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .portfolio-text{
+    padding: 30px;
+    display: flex;
+    flex-direction: column; 
+  }
+
+  .portfolio-text span{
+    color: rgb(0, 0, 0);
+    font-size: 0.9rem;
+  }
+
+  .portfolio-text .portfolio-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #000000;
+  }
+
+  .portfolio-text .portfolio-title:hover{
+    color: #881c28;
+    transition: all ease 0.3s;
+  }
+
+  .portfolio-text p{
+    color:rgb(157, 145, 145);
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient:vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 20px 0px;
+    }
+    
+    .portfolio-text a{
+    color: black;
+    }
+    
+    .portdolio-text a:hover{
+    color:#881c28;
+    transition: all ease 0.3s;
+    }
+    
+    footer {
+        text-align: center;
+        margin-top: 550px;
+        margin-bottom: 10px;
+        font-size: 15px;
+        letter-spacing: 2px;
+      }
 /*h1{
     font-family: 'Poiret One', sans-serif;
     text-align: center;
