--- a/Design/design.css
+++ b/Design/design.css
@@ -37,7 +37,7 @@ nav ul {
 nav ul li {
   display: inline-block;
   margin-right: 12px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 nav li a {
@@ -119,4 +119,61 @@ a.active {
   #check-ten:checked ~ ul {
     left: 0;
   }
+}
+
+h1 {
+  text-align: center;
+  
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
+}
+
+h2 {
+  color: rgb(255, 255, 179);
+  text-align: center;
+  text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(43, 0, 255);
+  background: rgba(141, 168, 249, 0.844);
+  text-transform: uppercase;
+  margin-top: 60px;
+  letter-spacing: 3px;
+}
+
+h3 {
+  text-align: center;
+  text-transform: capitalize;
+  text-transform: bold;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: 17px;
+  text-shadow: 1px 1px 1px white, 2px 2px 2px rgb(160, 217, 239);
+  letter-spacing: 2px;
+  text-decoration: underline;
+  text-decoration-color: rgb(160, 217, 239);
+}
+
+li {
+  list-style-type: none;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+a.font:link {
+  color: whitesmoke;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a.font:visited {
+  color: rgb(43, 0, 255);
+}
+
+a.font:hover {
+  font-size: 200%;
+  font-weight: bolder;
 }
