--- a/Design/design.css
+++ b/Design/design.css
@@ -177,3 +177,159 @@ a.font:hover {
   font-size: 200%;
   font-weight: bolder;
 }
+a.prev:link, a.prev:visited{
+  background-color:  blueviolet;
+  color: black;
+  font-weight:bolder;
+  padding: 8px 11px;
+  text-align: left;
+  text-decoration: none;
+  margin-top: 12px ;
+  border-radius: 15px;
+  display: inline-block;
+}
+
+a.prev:hover, a.prev:active{
+  background-color:rgb(93, 0, 180);
+  color: whitesmoke;
+}
+
+a.next:link, a.next:visited{
+  background-color:  blueviolet;
+  color: black;
+  font-weight:bolder;
+  padding: 8px 11px;
+  text-align: right;
+  text-decoration: none;
+  margin-top: 12px ;
+  border-radius: 15px;
+  display: inline-block;
+}
+
+a.next:hover, a.next:active{
+  background-color:rgb(93, 0, 180);
+  color: whitesmoke;
+}
+
+
+a.next{
+  float: right;
+ 
+}
+
+a.prev{
+  float: left;
+
+}
+
+.description {
+  line-height: 1.7;
+  color: whitesmoke;
+  text-align: center;
+  text-wrap: revert;
+  display: block;
+  margin-left: 175px;
+  margin-right: 175px;
+  margin-top: 20px;
+  
+}
+.webImg-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  flex-wrap: wrap;
+  border: 1px #000000;
+  border-radius: 20px;
+  flex-wrap: wrap;
+  align-content: stretch;
+  height: 70vh;
+}
+
+.webImg-box {
+  width: 55%;
+  background-color: blueviolet;
+  border: 1px solid rgb(160, 217, 239);
+  margin: 20px;
+  border-radius: 10px;
+  height: 90%;
+  overflow: hidden;
+}
+
+.webImg-boxPortrait{
+  width: 375px;
+  background-color: blueviolet;
+  border: 1px solid rgb(160, 217, 239);
+  margin: 20px;
+  border-radius: 10px;
+  height: 90%;
+  overflow: hidden;
+}
+.webImg-image {
+  width: auto;
+  height: 70vh;
+  padding: 0px;
+  border: #000000;
+  display: flex;
+}
+
+.webImg-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.webImg-text {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.webImg-text span {
+  color: rgb(0, 0, 0);
+  font-size: 0.9rem;
+}
+
+.webImg-text .blog-title {
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: #000000;
+}
+
+.webImg-text .blog-title:hover {
+  color: #881c28;
+  transition: all ease 0.3s;
+}
+
+.webImg-text p {
+  color:whitesmoke;
+  font-size: 0.9rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 13px 0px;
+}
+
+.webImg-text a {
+  color: black;
+}
+
+.webImg-text a:hover {
+  color: #881c28;
+  transition: all ease 0.3s;
+}
+
+footer {
+  text-align: center;
+  margin-top:1000px;
+  /*margin-bottom: auto;*/
+  font-size: 15px;
+  letter-spacing: 2px;
+}
+
+/*ul.prev ul.next{
+  display: inline;
+}
