--- a/Design/design.css
+++ b/Design/design.css
@@ -184,7 +184,7 @@ a.prev:link, a.prev:visited{
   padding: 8px 11px;
   text-align: left;
   text-decoration: none;
-  margin-top: 12px ;
+  margin-top: 100% ;
   border-radius: 15px;
   display: inline-block;
 }
@@ -201,7 +201,7 @@ a.next:link, a.next:visited{
   padding: 8px 11px;
   text-align: right;
   text-decoration: none;
-  margin-top: 12px ;
+  margin-top: 100% ;
   border-radius: 15px;
   display: inline-block;
 }
@@ -210,7 +210,6 @@ a.next:hover, a.next:active{
   background-color:rgb(93, 0, 180);
   color: whitesmoke;
 }
-
 
 a.next{
   float: right;
