--- a/Blogs/blogs.css
+++ b/Blogs/blogs.css
@@ -10,7 +10,13 @@ body {
   /*background: rgb(1, 1, 37);*/
   background: url(../Styles/images/landscapestars.jpg);
   background-size: cover;
-  height: 100vh;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
 }
 
 nav {
@@ -130,7 +136,6 @@ h1 {
   border-radius: 20px;
   flex-wrap: wrap;
   align-content: stretch;
-  height: 70vh;
 }
 
 .blog-box{
@@ -181,7 +186,7 @@ width:auto;
   }
   
   .blog-text p{
-  color:rgb(157, 145, 145);
+  color:rgb(255, 255, 255);
   font-size: 0.9rem;
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -202,9 +207,9 @@ width:auto;
 
   footer {
     text-align: center;
-    margin-top: 2175px;
     font-size: 15px;
     letter-spacing: 2px;
+    margin-top: auto;
   }
 /*li a {
   text-decoration: none;
