--- a/Blogs/weeklyblogs.css
+++ b/Blogs/weeklyblogs.css
@@ -4,13 +4,24 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-family: Georgia, "Times New Roman", Times, serif;
   color: rgb(255, 255, 179);
   /*background: rgb(1, 1, 37);*/
   background: url(../Styles/images/landscapestars.jpg);
   background-size: cover;
   height: 100vh;
+}
+
+main {
+  flex: 1;
 }
 
 nav {
@@ -187,7 +198,7 @@ h3 {
 
 footer {
   text-align: center;
-  margin-top: 100%;
+  margin-top: auto;
   /*margin-bottom: auto;*/
   font-size: 15px;
   letter-spacing: 2px;
@@ -203,7 +214,6 @@ footer {
   border-radius: 20px;
   flex-wrap: wrap;
   align-content: stretch;
-  height: 70vh;
 }
 
 .webImg-box {
@@ -317,7 +327,6 @@ a.prev{
   float: left;
 
 }
-
 /*ul.prev ul.next{
   display: inline;
 }
